added title change function

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <body>
     
     <div id="app">
+      <input type="text" v-on:input="changeTitle">
       <p>{{ title }}</p>
     </div>
-
-  <script src="helloworld.js"></script>
+    
+    <script src="helloworld.js"></script>
   </body>
 </html>
